# tmr

./: .gitignore  LICENSE  README.md  TBD.md  ToDo.md  action-plan2.4.md  code-review.md  code-review1.md  mise.toml  pyproject.toml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md  task_completion_workflow.md
archives/: 20260211-151731-action-plan2-done.md  20260211-151731-code-review2-done.md
conductor/: product-guidelines.md  product.md  setup_state.json  tech-stack.md  tracks.md  workflow.md
conductor/archive/base_timer_unit_tests_20260209/: index.md  metadata.json  plan.md  spec.md
conductor/archive/code_review_round_1_20260209/: index.md  metadata.json  plan.md  spec.md
conductor/archive/complete_pomodoro_implementation_20260204/: index.md  metadata.json  plan.md  spec.md
conductor/archive/refactor_progress_bar_tests_20260209/: index.md  metadata.json  plan.md  spec.md
conductor/archive/update_readme_usage_20260204/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/base_timer_unit_tests_20260209/: plan.md
conductor/tracks/code_review_round_1_20260209/: plan.md
conductor/tracks/expand_unit_tests_20260208/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/refactor_progress_bar_tests_20260209/: plan.md
samples/: ask1.py  gen1.py  progress1.py
src/tmr/: __init__.py  __main__.py  base_timer.py  click_utils.py  mylog.py  pomodoro.py  progress_bar.py  utils.py
tests/: test_app.py  test_base_timer.py  test_integration_alarm.py  test_pomodoro.py  test_progress_bar.py  test_timer.py  test_utils.py
