[project]
name = "tmr"
dynamic = ["version"]
description = "CLI Pomodoro Timer"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Yoichi Tanibayashi", email = "yoichi@tanibayashi.jp" }
]
requires-python = ">=3.13"
dependencies = [
    "blessed>=1.29.0",
    "click>=8.3.1",
    "loguru>=0.7.3",
]

[project.scripts]
tmr = "tmr.__main__:cli"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "basedpyright>=1.37.3",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "click,loguru,loguru.*,rich,rich.*,pytest,pytest.*"
ignore_missing_imports = true
follow_untyped_imports = true

# [tool.pytest.ini_options]
# addopts = "-v --cov=tmr --cov-report=term-missing --cov-branch"

[tool.basedpyright]
typeCheckingMode = "standard" 
reportMissingSuperCall = false
reportPossiblyUnboundVariable = "none"
reportMissingImports = "none"
reportOptionalCall = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportDuplicateImport = "warning"
reportUnreachable = "warning"
reportDeprecated = "warning"
useLibraryCodeForTypes = true
